--- a/index.html
+++ b/index.html
@@ -177,16 +177,11 @@
           <div class="nine columns">
             <div class="coverflow top10 bot10">
               <a class="prev-arrow"></a>
-              <a href=""><img src="https://dummyimage.com/640x360/fff/aaa
-" class="coverflow__image img-fluid" /></a>
-              <a href=""><img src="https://dummyimage.com/640x360/fff/aaa
-" class="coverflow__image img-fluid" /></a>
-              <a href=""><img src="https://dummyimage.com/640x360/fff/aaa
-" class="coverflow__image img-fluid" /></a>
-              <a href=""><img src="https://dummyimage.com/640x360/fff/aaa
-" class="coverflow__image img-fluid" /></a>
-              <a href=""><img src="https://dummyimage.com/640x360/fff/aaa
-" class="coverflow__image img-fluid" /></a>
+              <a href=""><img src="https://dummyimage.com/640x360/fff/aaa" class="coverflow__image img-fluid" /></a>
+              <a href=""><img src="https://dummyimage.com/640x360/fff/aaa" class="coverflow__image img-fluid" /></a>
+              <a href=""><img src="https://dummyimage.com/640x360/fff/aaa" class="coverflow__image img-fluid" /></a>
+              <a href=""><img src="https://dummyimage.com/640x360/fff/aaa" class="coverflow__image img-fluid" /></a>
+              <a href=""><img src="https://dummyimage.com/640x360/fff/aaa" class="coverflow__image img-fluid" /></a>
               <a class="next-arrow"></a>
             </div>
           </div>
